--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,7 +8,7 @@
   
 body {
     font-family: "Microsoft Sans Serif", Arial, sans-serif;
-    background-color: var(--theme-bg-color-white);
+    background-color: #efeff3;
 }
 
 .container{
