--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,8 +17,8 @@ body {
     margin: 0 auto;
     padding: 0 16px;
     /* Fix для iPhone */
-    padding-left: calc(16px + env(safe-area-inset-left)) !important;
-    padding-right: calc(16px + env(safe-area-inset-right)) !important;
+    padding-left: 16px !important;
+    padding-right: 16px !important;
     box-sizing: border-box;
 }
 
